[gd_scene load_steps=5 format=3 uid="uid://d8r9wx3mt5bkp"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_game_over"]
[ext_resource type="FontFile" uid="uid://dvxbp285xmtig" path="res://assets/fonts/Knights Quest.ttf" id="2_title_font"]
[ext_resource type="FontFile" uid="uid://brfvbtde0o65k" path="res://assets/fonts/FiraCode-Regular.ttf" id="3_body_font"]
[ext_resource type="Theme" uid="uid://bif1vn82s31vk" path="res://scenes/GUI.tres" id="4_theme"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 80.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_title_font")
theme_override_font_sizes/font_size = 68
text = "DEFEAT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CauseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 170.0
offset_bottom = 220.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.741176, 0.764706, 0.780392, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_body_font")
theme_override_font_sizes/font_size = 22
text = "Your party has fallen..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_theme")
text = "Return to Main Menu"